--- a/aulao/index.html
+++ b/aulao/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8" />
 		<title>Links do Aulão do Seminário</title>
 		<meta   name="keywords"        content="Seminários e Institutos, S&I" />
-		<meta   name="description"     content="Aulão Baixada Santista" />
+		<meta   name="description"     content="Aulão Regional do Seminário - Baixada Santista e Distrito de Registro" />
 		<meta   name="copyright"       content="©Código aberto" />
 		<meta   name="author"          content="Mick Hill" />
 		<meta   name="contact"         content="mickhill.qa@outlook.com" />
@@ -34,8 +34,8 @@
 			</header>
 
 			<main id="container-countdown" class="px-3">
-				<h1>Aulão Regional do S&I</h1>
-				<h4>Baixada Santista e Distrito de Registro</h4>
+				<h1>Aulão Regional do Seminário</h1>
+				<h4>Para todos os jovens da Baixada Santista e Distrito de Registro</h4>
 				<p>Quinta, 16 de Junho de 2021 as 18h30!</p>
 				<br />
 				<div id="countdown"></div>
