--- a/aulao/index.html
+++ b/aulao/index.html
@@ -45,8 +45,7 @@
 					<a class="btn btn-success btn-presenca" target="_blank" href="https://forms.gle/myFjxs8gkCLggtLT9">Registre sua participação</a>
 				</p>
 				<p>
-					<a class="btn btn-youtube" target="_blank" href="https://zoom.us/j/94534437630?pwd=S2tNMS9mdml2N2tUOFVqYzkvcFl1QT09
-">Zoom</a>
+					<a class="btn btn-youtube" target="_blank" href="x">Zoom</a>
 					<a class="btn btn-youtube" target="_blank" href="https://www.youtube.com/channel/UC2OlAt9qSRSCsXt0Pldi3aw/videos">YouTube</a>
 					<a class="btn btn-youtube" target="_blank" href="https://www.instagram.com/seiareabrasil/">Instagram</a>
 					<a class="btn btn-youtube" target="_blank" href="https://www.facebook.com/SI.IgrejadeJesusCristo">Facebook</a>
