--- a/aulao/index.html
+++ b/aulao/index.html
@@ -48,7 +48,8 @@
 					<a class="btn btn-youtube" target="_blank" href="x">Zoom</a>
 					<a class="btn btn-youtube" target="_blank" href="https://www.youtube.com/channel/UC2OlAt9qSRSCsXt0Pldi3aw/videos">YouTube</a>
 					<a class="btn btn-youtube" target="_blank" href="https://www.instagram.com/seiareabrasil/">Instagram</a>
-					<a class="btn btn-youtube" target="_blank" href="https://www.facebook.com/SI.IgrejadeJesusCristo">Facebook</a>
+					<a class="btn btn-youtube" target="_blank" href="https://www.facebook.com/SI.IgrejadeJesusCristo">Facebook - Área Brasil</a>
+					<a class="btn btn-youtube" target="_blank" href="https://www.facebook.com/SI.IgrejadeJesusCristo">Facebook - Santos</a>
 				</p>
 			</main>
 
