--- a/aulao/index.html
+++ b/aulao/index.html
@@ -42,7 +42,7 @@
 				<br />
 				<p id="note"></p>
 				<p>
-					<a class="btn btn-success btn-presenca" target="_blank" href="https://forms.gle/myFjxs8gkCLggtLT9">Registre sua participação</a>
+					<a class="btn btn-success btn-presenca" target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSdc0p6PEaEYxsbbIu85MOfhiINxK_D1s0l8_KNW_iLRzqOs7Q/viewform">Registre sua participação</a>
 				</p>
 				<p>
 					<a class="btn btn-youtube" target="_blank" href="https://zoom.us/j/93912768924?pwd=MDRjOGozUTNqTzQzdXROaE5RQmN0UT09#success">Zoom</a>
