--- a/aulao/index.html
+++ b/aulao/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br" class="h-100">
 	<head>
 		<meta charset="utf-8" />
-		<title>Links do Aulão do Seminário</title>
+		<title>Links da Aula Nacional do S&I</title>
 		<meta   name="keywords"        content="Seminários e Institutos, S&I" />
 		<meta   name="description"     content="Aulão Regional do Seminário - Baixada Santista e Distrito de Registro" />
 		<meta   name="copyright"       content="©Código aberto" />
@@ -34,9 +34,10 @@
 			</header>
 
 			<main id="container-countdown" class="px-3">
-				<h1>Aulão Regional do Seminário</h1>
-				<h4>Para todos os jovens da Baixada Santista e Distrito de Registro</h4>
-				<p>Quinta, 16 de Junho de 2021 as 18h30!</p>
+				<h1>Aula Nacional do S&I</h1>
+				<h3>Para todos os jovens e jovens adultos do Brasil</h4>
+				<h5>Este evento faz parte da Semana de Educação!</h5>
+				<p>Sexta, 23 de Julho de 2021 as 19h00!</p>
 				<br />
 				<div id="countdown"></div>
 				<br />
