--- a/aulao/index.html
+++ b/aulao/index.html
@@ -35,7 +35,7 @@
 
 			<main id="container-countdown" class="px-3">
 				<h1>Aula Nacional do S&I</h1>
-				<h4>Para todos os jovens de 14 à 30 anos da Área Brasil</h4>
+				<h4>Para todos os jovens e jovens adultos do Brasil</h4>
 				<h5>Este evento faz parte da Semana de Educação!</h5>
 				<p>Sexta, 23 de Julho de 2021 as 19h00!</p>
 				<br />
