--- a/aulao/index.html
+++ b/aulao/index.html
@@ -43,15 +43,12 @@
 				<br />
 				<p id="note"></p>
 				<p>
-					<a class="btn btn-success btn-presenca" target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSdc0p6PEaEYxsbbIu85MOfhiINxK_D1s0l8_KNW_iLRzqOs7Q/viewform">Registre sua participação</a>
+					<a class="btn btn-success btn-presenca" target="_blank" href="https://www.youtube.com/AutossuficienciaBrasil">Youtube</a>
 				</p>
 				<p>
-					<a class="btn btn-youtube" target="_blank" href="https://zoom.us/j/93912768924?pwd=MDRjOGozUTNqTzQzdXROaE5RQmN0UT09#success">Zoom</a>
-					<a class="btn btn-youtube" target="_blank" href="https://www.youtube.com/channel/UC2OlAt9qSRSCsXt0Pldi3aw/videos">YouTube</a>
-					<a class="btn btn-youtube" target="_blank" href="https://www.instagram.com/seiareabrasil/">Instagram</a>
-					<a class="btn btn-youtube" target="_blank" href="https://www.facebook.com/SI.IgrejadeJesusCristo">Facebook - Área Brasil</a>
-					<a class="btn btn-youtube" target="_blank" href="https://www.facebook.com/sei.santos.brasil">Facebook - Região Santos</a>
-				</p>
+					<a class="btn btn-youtube" target="_blank" href="https://www.facebook.com/autossuficienciabrasil/">Facebook/a>
+					<a class="btn btn-youtube" target="_blank" href="https://www.instagram.com/autossuficienciabrasil/">Instagram</a>
+					</p>
 			</main>
 
 			<footer class="mt-auto text-white-50">
