--- a/aulao/index.html
+++ b/aulao/index.html
@@ -46,7 +46,7 @@
 					<a class="btn btn-success btn-presenca" target="_blank" href="https://www.youtube.com/AutossuficienciaBrasil">Youtube</a>
 				</p>
 				<p>
-					<a class="btn btn-youtube" target="_blank" href="https://www.facebook.com/autossuficienciabrasil/">Facebook/a>
+					<a class="btn btn-youtube" target="_blank" href="https://www.facebook.com/autossuficienciabrasil/">Facebook</a>
 					<a class="btn btn-youtube" target="_blank" href="https://www.instagram.com/autossuficienciabrasil/">Instagram</a>
 					</p>
 			</main>
