--- a/aulao/index.html
+++ b/aulao/index.html
@@ -43,9 +43,10 @@
 				<br />
 				<p id="note"></p>
 				<p>
-					<a class="btn btn-success btn-presenca" target="_blank" href="https://www.youtube.com/AutossuficienciaBrasil">Youtube</a>
+					<a class="btn btn-success btn-presenca" target="_blank" href="https://forms.office.com/Pages/ResponsePage.aspx?id=s-7mYddfqkquPGHo3rCbeeBCa7U3qFJPu_OnY_MvGzVUQVkzUE1ZRU9aRDM3QzFXTU9PME0zNUxSWS4u">Assine a Lista de Frequência</a>
 				</p>
 				<p>
+					<a class="btn btn-youtube" target="_blank" href="https://www.youtube.com/AutossuficienciaBrasil">Youtube</a>
 					<a class="btn btn-youtube" target="_blank" href="https://www.facebook.com/autossuficienciabrasil/">Facebook</a>
 					<a class="btn btn-youtube" target="_blank" href="https://www.instagram.com/autossuficienciabrasil/">Instagram</a>
 					</p>
